--- a/style.css
+++ b/style.css
@@ -5,5 +5,11 @@ body {
     background: #333;
 }
 .loader{
-    
+    position: relative;
+    width: 200px;
+    height: 200px;
+    background: #f00;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
