--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ body {
     justify-content: center;
     align-items: center;
 }
+.loader h2 {
+    font-family: sans-serif;
+    font-size: 30px;
+    font-weight: 500;
+    color: #fff;
+}
