--- a/style.css
+++ b/style.css
@@ -19,3 +19,13 @@ body {
     font-weight: 500;
     color: #fff;
 }
+.loader span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #fff;
+    pointer-events: none;
+    animation: animate 5s linear infinite;
+}
