--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@ body {
     pointer-events: none;
     animation: animate 5s linear infinite;
 }
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+}
