--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: -0;
+    padding: 0;
+}
 body {
     min-height: 100vh;
     margin-left: 100px;
@@ -18,6 +22,15 @@ body {
     font-size: 30px;
     font-weight: 500;
     color: #fff;
+}
+.loader span:nth-child(1) {
+    border-radius: 50%;
+}
+.loader span:nth-child(2) {
+    animation-direction: reverse;
+}
+.loader span:nth-child(3) {
+    animation-duration: 3s;
 }
 .loader span {
     position: absolute;
