--- a/style.css
+++ b/style.css
@@ -24,13 +24,15 @@ body {
     color: #fff;
 }
 .loader span:nth-child(1) {
-    border-radius: 50%;
+    border-radius: 87% 13% 30% 70% / 43% 33% 67% 57% ;
 }
 .loader span:nth-child(2) {
     animation-direction: reverse;
+    border-radius: 27% 73% 69% 31% / 46% 58% 42% 54% ;
 }
 .loader span:nth-child(3) {
     animation-duration: 3s;
+    border-radius: 24% 76% 39% 61% / 51% 23% 77% 49% ;
 }
 .loader span {
     position: absolute;
@@ -46,7 +48,7 @@ body {
     0% {
         transform: rotate(0deg);
     }
-    0% {
+    100% {
         transform: rotate(360deg);
     }
 }
