--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    margin: -0;
+    margin: 0;
     padding: 0;
 }
 body {
@@ -8,7 +8,7 @@ body {
     margin-top: 70px;
     background: #333;
 }
-.loader{
+/* .loader{
     position: relative;
     width: 200px;
     height: 200px;
@@ -16,12 +16,27 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+} */
+.loader {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 .loader h2 {
     font-family: sans-serif;
     font-size: 30px;
     font-weight: 500;
     color: #fff;
+    margin-left: 40px;
+    margin-top: 70px;
 }
 .loader span:nth-child(1) {
     border-radius: 87% 13% 30% 70% / 43% 33% 67% 57% ;
@@ -48,7 +63,7 @@ body {
     0% {
         transform: rotate(0deg);
     }
-    100% {
+    0% {
         transform: rotate(360deg);
     }
 }
